tests/compile-fail/integration__integration__general__func_const_reg.snap
---
source: tests/integration/general.rs
expression: stderr
---
error: raw register in const context
   ┌─ <input>:27:25
   │
27 │             int x = 3 + $REG[10000];
   │                         ^^^^^^^^^^^ forbidden in this context


